Acutualizando-nuevos-archivos

--- a/PetShop-Client/client/src/components/LoginForm/LoginForm.scss
+++ b/PetShop-Client/client/src/components/LoginForm/LoginForm.scss
@@ -1,8 +1,6 @@
 @import "../../scss/index.scss";
 
-
-.sign-up-form {
-  
+.sign-in-form {
   h2 {
     font-weight: bold;
     padding-bottom: 30px;
@@ -32,6 +30,4 @@
       height: 25px;
     }
   }
-
 }
-
