--- a/PetShop-Client/client/src/index.scss
+++ b/PetShop-Client/client/src/index.scss
@@ -44,6 +44,7 @@ code {
 
 
 input.form-control,
+
 textarea.form-control {
   background-color: $primary-light;
   border-radius: 0;
@@ -51,6 +52,7 @@ textarea.form-control {
   border-bottom: 1px solid $border-dark;
   color: $font-green-dark !important;
   margin-bottom: 10px;
+  font-size: 25px;
 
   &:focus {
     background-color: $background-light;
