--- a/PetShop-Client/client/src/components/RegistroCliente/RegistroCliente.scss
+++ b/PetShop-Client/client/src/components/RegistroCliente/RegistroCliente.scss
@@ -26,6 +26,11 @@
     border-radius: 50px;
     margin-top: 30px;
     color: $primary;
+
+    .spinner-border {
+      width: 25px;
+      height: 25px;
+    }
   }
 
 }
