--- a/PetShop-Client/client/src/page/LogSignUp/LogSignUp.scss
+++ b/PetShop-Client/client/src/page/LogSignUp/LogSignUp.scss
@@ -71,15 +71,28 @@
                     margin-bottom: 20px;
                 }
             }
+
+            p {
+                position: absolute;
+                bottom: 0;
+                text-align: center;
+            }
         }
     }
 }
 
 .logo {
     position: relative;
-    top: 50%;
+    top: 30%;
     color: $font-primary;
     font-weight: bold;
-    font-size: 40px;
+    font-size: 40px; 
+    text-align: center; 
+    height: 200px; 
 }
 
+.logoPng {
+    position: relative;
+    bottom: -30%;
+    width: 150px;
+}
