--- a/PetShop-Client/client/src/page/LogSignUp/LogSignUp.scss
+++ b/PetShop-Client/client/src/page/LogSignUp/LogSignUp.scss
@@ -57,7 +57,7 @@
 .logo {
     position: relative;
     top: 30%;
-    color: $font-primary;
+    color: $font-dark;
     font-weight: bold;
     font-size: 40px; 
     text-align: center; 
