--- a/PetShop-Client/client/src/scss/_colors.scss
+++ b/PetShop-Client/client/src/scss/_colors.scss
@@ -1,16 +1,16 @@
-$primary: #F0EBCE;
-$primary-light: #AA8B56;
-$primary-dark-light: #4E6C50;
-$primary-dark: #395144;
+$primary: #FFF2F2;
+$primary-light: #E5E0FF;
+$primary-dark-light: #8EA7E9;
+$primary-dark: #7286D3;
 
 $font-primary: $primary;
-$font-light: #82c505;
-$font-dark: #080808;
-$font-green-dark: #395144;
+$font-light: #916BBF;
+$font-dark: #3D2C8D;
+$font-green-dark: #1C0C5B;
 
 $border-primary: $primary-light;
-$border-light: hsl(71, 93%, 48%);
-$border-grey: #38444d;
+$border-light: #3D2C8D;
+$border-grey: #C996CC;
 $border-dark: $primary-dark;
 
 $background-light: $primary;
