--- a/PetShop-Client/client/src/page/HomeVendedor/HomeVendedor.scss
+++ b/PetShop-Client/client/src/page/HomeVendedor/HomeVendedor.scss
@@ -2,4 +2,45 @@
 
 .home-vendedor {
   background-color: $primary;
+  
 }
+
+#fill-tab-example-tab-listaCLiente,
+#fill-tab-example-tab-listaVendedores-tab,
+#fill-tab-example-tab-pedidos {
+  color: $font-green-dark;
+
+  &:active,
+  &:focus {
+    color: $primary-dark;
+  }
+}
+
+.col {
+  padding-left: 12px;
+  padding-right: 12px;
+}
+
+
+
+
+// #fill-tab-example-tab-listaCLiente {
+//   color: $font-green-dark;
+//   &:active {
+//     color: $primary-dark
+//   }
+// }
+
+// #fill-tab-example-tab-listaVendedores-tab {
+//   color: $font-green-dark;
+//   &:active {
+//     color: $primary-dark
+//   }
+// }
+
+// #fill-tab-example-tab-pedidos {
+//   color: $font-green-dark;
+//   &:active {
+//     color: $primary-dark
+//   }
+// }
