--- a/PetShop-Client/client/src/index.scss
+++ b/PetShop-Client/client/src/index.scss
@@ -27,6 +27,7 @@ code {
   background-color: $primary-light;
   border-color: $primary-light;
   color: $font-dark;
+  font-weight: bold;
   &:hover {
     background-color: $font-green-dark;
     color: $primary-dark-light;
@@ -48,7 +49,7 @@ input.form-control,
 
 textarea.form-control {
   background-color: $primary-light;
-  border-radius: 0;
+  border-radius: 5px;
   border: 0;
   border-bottom: 1px solid $border-dark;
   color: $font-green-dark !important;
@@ -127,6 +128,39 @@ select.form-select {
   }
 }
 
-.table-sm.table-striped.table-bordered.table-hover {
+.table.table-dark.table-sm.table-striped.table-hover {
   max-width: 100%;
+  border-color: $font-light;
+  justify-items: center;
+  text-align: center;
+  border-radius: 5px;
 }
+
+table.table-sm.table-striped.table-hover {
+  max-width: 100%;
+  border-color: $font-light;
+  justify-items: center;
+  text-align: center;
+  border-radius: 5px;
+}
+
+.card-body {
+  display: block;
+  width: 100%;
+  border: solid;
+  border-color: $font-light;
+  border-width: 2px;
+  border-radius: 5px;
+  background-color: transparentize($color: $font-light, $amount: 0.8);
+}
+
+.card-title.h5{
+  color: $font-dark;
+  font-weight: bold;
+}
+
+.card-text {
+  color: $font-light;
+  font-weight: bold;
+}
+
