--- a/PetShop-Client/client/src/page/HomeVendedor/HomeVendedor.scss
+++ b/PetShop-Client/client/src/page/HomeVendedor/HomeVendedor.scss
@@ -5,14 +5,21 @@
   
 }
 
+.mb-3 {
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
 #fill-tab-example-tab-listaCLiente,
 #fill-tab-example-tab-listaVendedores-tab,
 #fill-tab-example-tab-pedidos {
   color: $font-green-dark;
+  border-color: $font-light;
 
   &:active,
   &:focus {
     color: $primary-dark;
+    background-color: transparentize($color: $font-light, $amount: 0.8);
   }
 }
 
