--- a/PetShop-Client/client/src/components/Header/Header.scss
+++ b/PetShop-Client/client/src/components/Header/Header.scss
@@ -10,6 +10,7 @@
   text-align: center;
   color: $font-dark;
   padding: 20px;
+  margin-bottom: 5px;
 
   span.spanheader {
     color: $font-primary;
