--- a/PetShop-Client/client/src/components/HistorialPedidosCliente/HistorialPedidosCliente.scss
+++ b/PetShop-Client/client/src/components/HistorialPedidosCliente/HistorialPedidosCliente.scss
@@ -5,6 +5,15 @@
   text-align: center;
   color: $font-dark;
   font-weight: bold;
+  border: solid;
+  border-width: 2px;
+  border-radius: 5px;
+  margin-top: 5px;
+  border-color: $font-light;
+  align-items: center;  
+  justify-content: center;
+  padding: 10px;
 }
+
 
 
